User scoring completed

--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -277,7 +277,7 @@
           <label>{{"postJob.enterNumberOfPositions" | translate}}</label>
         </div>
         <div appMarkAsterisk class="form-group">
-          <input numbersOnly formControlName="number_of_positions" class="form-control form-control-sm w-50" type="text" placeholder="Numbers"/>
+          <input style="width: 100px !important;" numbersOnly formControlName="number_of_positions" class="form-control form-control-sm w-50" type="text" placeholder="Numbers"/>
           <app-control-messages [control]="f['number_of_positions']"></app-control-messages>
         </div>
       </div>
