--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -59,8 +59,9 @@
                     </div>
                     <div class="col-lg-5 text-right mt-2">
                       <span data-toggle="modal" data-target="#exampleModal">
-                        <a class="btn btn-outline-blue btn-sm mr-1" href="javascript:;">
-                        <i class="fas fa-file-alt"></i> Resume</a>
+                        <a (click)="onToggleResumeForm(true, (userInfo?.meta?.doc_resume?.path + '/' + userInfo?.meta?.doc_resume?.folder + '/' + item?.file))" class="btn btn-outline-blue btn-sm" href="javascript:;">
+                          <i class="fas fa-file-alt"></i> {{"dashboard.resume" | translate }}
+                        </a>
                       </span>
                       <span data-toggle="modal" data-target="#sendMail">
 												<a class="btn btn-outline-orange btn-sm" href="javascript:;">
@@ -220,7 +221,13 @@
   </div>
 </section>
 
+<!-- <app-resume-modal
+*ngIf="isOpenedResumeModal"
+[toggleResumeModal]="isOpenedResumeModal"
+(onEvent)="onToggleResumeForm($event)">
+</app-resume-modal> -->
 <app-resume-modal
+[url]="selectedResumeUrl"
 *ngIf="isOpenedResumeModal"
 [toggleResumeModal]="isOpenedResumeModal"
 (onEvent)="onToggleResumeForm($event)">
