--- a/frontend/src/app/shared/component/modal/job-description/job-description.component.html
+++ b/frontend/src/app/shared/component/modal/job-description/job-description.component.html
@@ -11,6 +11,6 @@
     </div>
     <div class="modal-footer">
     <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
-    <button type="button" class="btn btn-theme-blue btn-sm" data-dismiss="modal">Ok</button>
+    <button (click)="onClickCloseBtn(false)" type="button" class="btn btn-theme-blue btn-sm" data-dismiss="modal">Ok</button>
     </div>
 </ng-template>
