--- a/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-3 info-box">
-  <div class="col-lg-12 mt-2">
+  <!-- <div class="col-lg-12 mt-2">
     <h6 class="font-weight-bold">&nbsp;</h6>
-  </div>
+  </div> -->
   <div class="col-lg-4 caption">
     <ul class="list-group">
       <li class="list-group-item">{{"dashboard.totalYearsOfExp" | translate }}</li>
@@ -37,7 +37,7 @@
   <div class="col-lg-12 border-top pt-3"> </div>
   <div class="col-lg-4 caption">
     <ul class="list-group">
-      <li class="list-group-item lg-mh-40">{{"postJob.knowledgeOnOtherSapSkills" | translate }}</li>
+      <li class="list-group-item">{{"postJob.knowledgeOnOtherSapSkills" | translate }}</li>
       <li class="list-group-item">{{"postJob.programmingSkills" | translate }}</li>
       <li class="list-group-item">{{"postYourResume.others" | translate }}</li>
       <li class="list-group-item">{{"postJob.certification" | translate }}</li>
@@ -46,7 +46,7 @@
   </div>
   <div class="col-lg-8 info">
     <ul class="list-group">
-      <li class="list-group-item text-uppercase lg-mh-40">
+      <li class="list-group-item text-uppercase">
         <ng-container *ngIf="userInfo?.skills?.length; else elseSkillsTemplate">
           <span class="m-0 float-left" *ngFor="let item of utilsHelperService.differenceByPropValArray(userInfo?.skills, userInfo?.hands_on_experience, 'skill_id'); let i = index; let last = last;">
             <span class="text-wrap-custom float-left"
@@ -78,21 +78,21 @@
   <div class="col-lg-12 border-top pt-3"> </div>
   <div class="col-lg-4 caption">
     <ul class="list-group">
-      <li class="list-group-item">{{"postYourResume.previousEmployers" | translate}}</li>
+      <li class="list-group-item" *ngIf="!fieldsExclude?.clients_worked">{{"postYourResume.previousEmployers" | translate}}</li>
       <li class="list-group-item">{{"postJob.jobType" | translate}}</li>
-      <li class="list-group-item">{{"postYourResume.rolesLookingFor" | translate }}</li>
+      <li class="list-group-item" *ngIf="!fieldsExclude?.job_role">{{"postYourResume.rolesLookingFor" | translate }}</li>
       <li class="list-group-item">{{"postJob.remote" | translate }}</li>
     </ul>
   </div>
   <div class="col-lg-8 info">
     <ul class="list-group">
-      <li class="list-group-item text-capitalize">
+      <li class="list-group-item text-capitalize"  *ngIf="!fieldsExclude?.clients_worked">
         {{utilsHelperService.onConvertArrayToString(userInfo?.clients_worked)}}
       </li>
       <li class="list-group-item text-capitalize">
         {{(userInfo?.job_type || userInfo?.job_type == 0) ? sharedService.onGetJobType(userInfo?.job_type) : '--'}}
       </li>
-      <li class="list-group-item text-capitalize">
+      <li class="list-group-item text-capitalize" *ngIf="!fieldsExclude?.job_role">
         {{userInfo?.job_role ? userInfo?.job_role : '--'}}
       </li>
       <li class="list-group-item text-capitalize">
@@ -101,13 +101,13 @@
     </ul>
   </div>
 
-  <div class="col-lg-12 border-top pt-3"> </div>
+  <!-- <div class="col-lg-12 border-top pt-3"> </div> -->
   <div class="col-lg-4 caption">
     <ul class="list-group">
       <li class="list-group-item">{{"postJob.availableIn" | translate }}</li>
       <li class="list-group-item">{{"postJob.workAuthorization" | translate }}</li>
       <li class="list-group-item">{{"postJob.travel" | translate }}</li>
-      <li class="list-group-item">{{"postJob.willingToRelocate" | translate }}</li>
+      <li class="list-group-item" *ngIf="!fieldsExclude?.willing_to_relocate">{{"postJob.willingToRelocate" | translate }}</li>
     </ul>
   </div>
   <div class="col-lg-8 info">
@@ -121,7 +121,7 @@
        <li class="list-group-item">
         {{(userInfo?.travel || userInfo?.travel == 0) ? userInfo?.travel == 0 ? 'No' : userInfo?.travel + '%' : '--'}}
       </li>
-      <li class="list-group-item">
+      <li class="list-group-item" *ngIf="!fieldsExclude?.willing_to_relocate">
         {{utilsHelperService.onGetYesOrNoValue(userInfo?.willing_to_relocate)}}
       </li>
     </ul>
