--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -57,3 +57,45 @@
   border-left: 0;
 }
 
+a.disabled {
+  color: gray;
+  cursor: not-allowed;
+}
+
+.applied-btn-green {
+  color: #fff;
+  border-color: #11b771;
+  background: #11b771;
+}
+.applied-btn-green:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+.upload-box .box {
+  border: 1.25px dashed #cccccc !important;
+  /* width: 100%; */
+  /* height: auto; */
+  padding: 0px;
+  position: absolute !important;
+  z-index: 99 !important;
+  min-height: 180px !important;
+  right: 20px !important;
+  background: #fefefe !important;
+  border-radius: 114px !important;
+  height: 150px !important;
+  width: 150px !important;
+}
+
+.upload-box .box label {
+  position: absolute;
+    width: 100%;
+    right: 0;
+    left: 0;
+    top: 61px;
+    bottom: 0;
+}
+
+.upload-box .box input {
+  z-index: 9;
+}
