--- a/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile/shared-job-profile.component.html
@@ -123,4 +123,11 @@
     </ul>
   </div>
 
+  <div *ngIf="isDescrition" class="col-lg-12 border-top pt-3">	</div>
+
+  <div  *ngIf="isDescrition" class="col-lg-12">
+    <h6>Job Description</h6>
+    <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+  </div>
+
 </div>
