--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
@@ -21,6 +21,7 @@
           <div class="col-lg-12">
             <app-contact-card
             [userInfo]="userDetails"
+            [jobInfo]="postedJobsDetails"
             [isEdit]="false"
             [isResume]="true"
             [isMail]="true"
