--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
@@ -1,4 +1,4 @@
-<section class="my-4">
+<section class="my-4" style="min-height: 300px;">
   <div class="container container-big">
     <div class="row mb-4">
       <div class="col-lg-12 text-right">
