--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -42,7 +42,7 @@
                 <div class="card profile-card">
                   <div class="d-flex">
                     <div class="pc-info">
-                      <a class="text-capitalize" href="job-candidate-profile-view.html">
+                      <a [routerLink]="[ '/user/candidate-job-view', matchingJob?.jobs?.id ]" class="text-capitalize" href="javascript:;">
                         <h5>{{matchingJob?.jobs?.title}} <small></small></h5>
                       </a>
                       <h6 class="mb-0 text-capitalize">
@@ -319,7 +319,15 @@
                   <!-- <li class="list-group-item"><span class="matchTxt"><i class="far fa-check-circle text-green small"></i> Yes </span></li> -->
                 </ul>
 
-                <button type="submit" class="btn btn-outline-orange ml-auto" data-toggle="modal" data-target="#sendMail" style="position: absolute;bottom: 15px; right: 15px;">	<i class="fas fa-paper-plane"></i> Send Mail</button>
+                <!-- <button
+                [ngClass]="{'applied-btn-green': (matchingJob?.jobs?.is_job_applied  || (currentJobDetails?.id == matchingJob?.jobs?.id && !isOpenedResumeSelectModal)), 'btn-outline-green': !matchingJob?.jobs?.is_job_applied}"
+                [disabled]="matchingJob?.jobs?.is_job_applied || (currentJobDetails?.id == matchingJob?.jobs?.id && !isOpenedResumeSelectModal)"
+                type="button" class="btn btn-sm"
+                 (click)="onToggleResumeSelectModal(true, matchingJob?.jobs)">
+                  <i class="fas fa-check"></i>
+                  {{(matchingJob?.jobs?.is_job_applied || (currentJobDetails?.id == matchingJob?.jobs?.id && !isOpenedResumeSelectModal)) ? 'Applied' : 'Apply Now'}}
+               </button> -->
+                <!-- <button type="submit" class="btn btn-outline-green ml-auto" data-toggle="modal" data-target="#applyJob" style="position: absolute;bottom: 15px; right: 15px;"> <i class="fas fa-check"></i> Apply</button> -->
               </div>
             </div>
           </div>
@@ -349,3 +357,10 @@
 *ngIf="isOpenedJDModal"
 (onEvent)="onToggleJDModal($event)">
 </app-job-description>
+
+<app-resume-select
+[toggleResumeSelectModal]="isOpenedResumeSelectModal"
+[currentJobDetails]="matchingJob?.jobs"
+*ngIf="isOpenedResumeSelectModal"
+(onEvent)="onToggleResumeSelectModal($event)">
+</app-resume-select>
