--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -74,12 +74,10 @@ a.disabled {
 
 .upload-box .box {
   border: 1.25px dashed #cccccc !important;
-  /* width: 100%; */
-  /* height: auto; */
   padding: 0px;
   position: absolute !important;
   z-index: 99 !important;
-  min-height: 180px !important;
+  min-height: 150px !important;
   right: 20px !important;
   background: #fefefe !important;
   border-radius: 114px !important;
@@ -89,11 +87,12 @@ a.disabled {
 
 .upload-box .box label {
   position: absolute;
-    width: 100%;
-    right: 0;
-    left: 0;
-    top: 61px;
-    bottom: 0;
+  width: 100%;
+  right: 0;
+  left: 0;
+  top: 61px;
+  bottom: 0;
+  z-index: -1;
 }
 
 .upload-box .box input {
