--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -103,13 +103,13 @@
                     </ng-container>
                     <ng-container *ngFor="let item of onChangeValue(matchingJob?.jobs?.domains_worked, userInfo?.domain); let first = first;">
                       <span class="matchTxt text-capitalize">
-                        <i *ngIf="onChangeStringNumber('domains_worked', 'domain', item, 'check').type == 'info'" class="far fa-info-circle text-green small" [ngClass]="{'ml-2': !first}"></i>
+                        <i *ngIf="onChangeStringNumber('domains_worked', 'domain', item, 'check').type == 'info'" class="fa fa-info-circle text-blue small" [ngClass]="{'ml-2': !first}"></i>
                         {{sharedService.onFindDomainFromSingleID(item)?.name}}
                       </span>
                     </ng-container>
                     <ng-container  *ngFor="let item of userInfo?.domain; let first = first;">
                       <span class="matchTxt text-capitalize">
-                        <i *ngIf="onChangeStringNumber('domains_worked', 'domain', item, 'check').type == 'close'" class="far fa-times-circle text-green small" [ngClass]="{'ml-2': !first}"></i>
+                        <i *ngIf="onChangeStringNumber('domains_worked', 'domain', item, 'check').type == 'close'" class="far fa-times-circle text-danger small" [ngClass]="{'ml-2': !first}"></i>
                         {{sharedService.onFindDomainFromSingleID(item)?.name}}
                       </span>
                     </ng-container>
@@ -132,7 +132,7 @@
                         *ngIf="onChangeObj('hands_on_experience', 'hands_on_experience', item, 'close', 'skill_id').type == 'close'">
                           {{utilsHelperService.onSplitTag(item.skill_name)}}
                           <br>
-                        <i class="far fa-info-circle text-blue small" [ngClass]="{'ml-2': !first}"></i>
+                        <i class="fa fa-info-circle text-blue" [ngClass]="{'ml-2': !first}"></i>
                         ({{item?.experience + ' ' + item?.exp_type?.charAt(0)}})
                       </div>
                     </ng-container>
@@ -172,7 +172,7 @@
                         *ngFor="let item of onChangeValue(matchingJob?.jobs?.skills, userInfo?.skills); let first = first;">
                         <span
                           *ngIf="onChangeStringNumber('skills', 'skills', item, 'close').type == 'close'">
-                          <i class="far fa-info-circle text-blue small" [ngClass]="{'ml-2': !first}"></i>
+                          <i class="fa fa-info-circle text-blue" [ngClass]="{'ml-2': !first}"></i>
                           {{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.tag)}}
 
                         </span>
@@ -230,7 +230,7 @@
                       *ngFor="let item of onChangeValue(matchingJob?.jobs?.optinal_skills, userInfo?.other_skills); let first = first;">
                       <span
                         *ngIf="onChangeStringNumber('other_skills', 'optinal_skills', item, 'close', true).type == 'close'">
-                        <i class="far fa-info-circle text-blue small" [ngClass]="{'ml-2': !first}"></i>
+                        <i class="fa fa-info-circle text-blue" [ngClass]="{'ml-2': !first}"></i>
                         {{item}}
                       </span>
                     </ng-container>
@@ -256,7 +256,7 @@
                       *ngFor="let item of onChangeValue(matchingJob?.jobs?.certification, userInfo?.certification); let first = first;">
                       <span
                         *ngIf="onChangeStringNumber('certification', 'certification', item, 'close', true).type == 'close'">
-                        <i class="fa fa-info-circle text-blue smal" [ngClass]="{'ml-2': !first}"></i>
+                        <i class="fa fa-info-circle text-blue" [ngClass]="{'ml-2': !first}"></i>
                         {{item}}
                       </span>
                     </ng-container>
@@ -295,8 +295,8 @@
                     {{utilsHelperService.onGetYesOrNoValue(matchingJob?.jobs?.remote)}}
                    </li>
                   <li class="list-group-item">
-                    <i *ngIf="matchingJob?.jobs?.availability >= userInfo?.availability" class="fa fa-check-circle text-green small"></i>
-                    <i *ngIf="matchingJob?.jobs?.availability < userInfo?.availability" class="fa fa-times-circle text-danger small"></i>
+                    <i *ngIf="matchingJob?.jobs?.availability <= userInfo?.availability" class="fa fa-check-circle text-green small"></i>
+                    <i *ngIf="matchingJob?.jobs?.availability > userInfo?.availability" class="fa fa-times-circle text-danger small"></i>
                     {{(matchingJob?.jobs?.availability || matchingJob?.jobs?.availability == 0) ?
                       (matchingJob?.jobs?.availability == 0 ? 'Immediate' : matchingJob?.jobs?.availability
                       +
